--- a/es.yaml.template
+++ b/es.yaml.template
@@ -1,11 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: ${K8S_METADATA_NAME}
+  namespace: ${K8S_METADATA_NAMESPACE}
+  labels:
+    app: ${K8S_METADATA_NAME}
+spec:
+  ports:
+    - port: 9200
+      protocol: TCP
+  clusterIP: None
+  selector:
+    app: ${K8S_METADATA_NAME}
+    elasticsearch-node-type: master
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: ${K8S_METADATA_NAME}-master
   namespace: ${K8S_METADATA_NAMESPACE}
   labels:
     app: ${K8S_METADATA_NAME}
 spec:
+  ports:
+    - port: 9300
+      protocol: TCP
   clusterIP: None
   selector:
     app: ${K8S_METADATA_NAME}
